--- a/chepsync/package.json
+++ b/chepsync/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "npm@10.5.2",
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
+  },
   "dependencies": {
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
